# HackerOS-TV

./: HackerOS-TV.desktop  README.md  app.py  build.hl  hackeros-tv.kv  index.html  main.py  package.json  remove.hacker  remove.hl  setup.sh  unpack.hacker  unpack.hl  vite.config.ts
desktop/: HackerOS-TV.desktop
source-code/: main.py
source-code/src/: main.rs
src/: App.module.css  App.tsx  sources.ts  tauriApi.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  hk_parser.rs  lib.rs  main.rs
src/components/: BackButton.module.css  BackButton.tsx  BrowseView.module.css  BrowseView.tsx  CinemaOverlay.module.css  CinemaOverlay.tsx  HomeView.module.css  HomeView.tsx  SearchBar.module.css  SearchBar.tsx  SessionMenu.module.css  SessionMenu.tsx  SettingsView.module.css  SettingsView.tsx  SourceCard.module.css  SourceCard.tsx  Toast.module.css  Toast.tsx  TopBar.tsx  Topbar.module.css
src/styles/: global.css
templates/: index.html
wrapper/: streambox
