[package]
name = "streambox"
version = "0.1.0"
description = "StreamBox — Desktop Streaming Session"
authors = ["you"]
edition = "2021"

[lib]
name = "streambox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "streambox"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
